--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+# App name
 spring.application.name=JPADemo
+
+# Port (keep default or specify explicitly)
+server.port=8080
 
 # MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/fullstack
+spring.datasource.url=jdbc:mysql://localhost:3306/Crud
 spring.datasource.username=root
-spring.datasource.password=Sandhiya@14
-
+spring.datasource.password=#Diswanth@sql2683.
 
 # JPA Configuration
 spring.jpa.show-sql=true
