--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-# App name
+# App Name
 spring.application.name=JPADemo
 
-# Port (keep default or specify explicitly)
-server.port=8080
+# Dynamic port for Railway
+server.port=${PORT:8080}
 
-# MySQL Database Configuration
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Crud
+# MySQL (Railway) Configuration
+spring.datasource.url=jdbc:mysql://nozon:3306/railway
 spring.datasource.username=root
-spring.datasource.password=#Diswanth@sql2683.
+spring.datasource.password=slbdgnJMhdNdCKcyWZjjwStbDOZCxjey
+
+# JDBC Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
