--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # App Name
 spring.application.name=JPADemo
 
-# Dynamic port for Railway
+# Dynamic port for Railway (IMPORTANT)
 server.port=${PORT:8080}
 
 # MySQL (Railway) Configuration
-spring.datasource.url=jdbc:mysql://nozon:3306/railway
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:3306/railway
 spring.datasource.username=root
-spring.datasource.password=slbdgnJMhdNdCKcyWZjjwStbDOZCxjey
+spring.datasource.password=slbdgnJMhdNdCKcyWZjjwStbDOzCxjey
 
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,4 +16,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
