--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,18 @@
 # App Name
 spring.application.name=JPADemo
 
-# Dynamic port for Railway (IMPORTANT)
+# Dynamic port for Railway (do not hardcode port 8080)
 server.port=${PORT:8080}
 
-# MySQL (Railway) Configuration
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:3306/railway
+# MySQL Railway Configuration (updated based on your provided URL)
+spring.datasource.url=jdbc:mysql://metro.proxy.rlwy.net:51848/railway
 spring.datasource.username=root
-spring.datasource.password=slbdgnJMhdNdCKcyWZjjwStbDOzCxjey
+spring.datasource.password=KGIpPErITsdRBuAVGNGYPVpsijTODAgg
 
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Configuration
+# Hibernate / JPA Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
