--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.application.name=JPADemo
 # Dynamic port for Railway (do not hardcode port 8080)
 server.port=${PORT:8080}
 
-# MySQL Railway Configuration (updated based on your provided URL)
-spring.datasource.url=jdbc:mysql://metro.proxy.rlwy.net:51848/railway
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/crud
 spring.datasource.username=root
-spring.datasource.password=KGIpPErITsdRBuAVGNGYPVpsijTODAgg
+spring.datasource.password=#Diswanth@sql2683.
 
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
